# cosy

./: .gitignore  README.md  pyproject.toml
scripts/: AR_optimize.py  SR_optimize.py  debug.slurm  energy_tof.py  generate_result.bat  generate_result.py  optimize.slurm  plot_lens.py  raytrace_from_record.py  raytracing.py  replot.py  save_results.py  slurm_optimize.py  test_uv.sh
src/cosy/: __init__.py  constants.py  data_gen.py  einzel.py  lens.py  objective.py  optimizer.py  plots.py  utils.py
src/fox/: BuildModel.fox  CalculateMap.fox  Centroid.fox  CheckModel.fox  ConversionTable.fox  DataGenerationTemplate.fox  GenerateRays.fox  ObjectiveTemplate.fox  RaytracingTemplate.fox  WeakLens.fox  diagnostics.fox
