[project]
name = "cosy"
version = "0.1.0"
description = "run Cosy simulations through Python"
readme = "README.md"
authors = [
    { name = "Jacob Gobbo", email = "gobbo.jacob@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "colorama>=0.4.6",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pathos>=0.3.4",
    "pybads>=1.0.5",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
